--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -55,7 +56,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                        <div class="row panda-bg-info bg-gradient p-5 d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>
                                     Cool Dude Headphone
@@ -68,7 +69,7 @@
                                 <h1>
                                     $ 420
                                 </h1>
-                                <div class="btn btn btn-warning">Buy Now</div>
+                                <div class="btn panda-btn-buy-now">Buy Now</div>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -79,7 +80,7 @@
 
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                        <div class="row panda-bg-info bg-gradient p-5 d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>
                                     mega LCD TV for sports
@@ -92,7 +93,7 @@
                                 <h1>
                                     $ 1200
                                 </h1>
-                                <div class="btn btn btn-warning">Buy Now</div>
+                                <div class="btn panda-btn-buy-now">Buy Now</div>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -101,7 +102,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                        <div class="row panda-bg-info bg-gradient p-5 d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>
                                     X Box for your leaving
@@ -114,7 +115,7 @@
                                 <h1>
                                     $ 600
                                 </h1>
-                                <div class="btn btn btn-warning">Buy Now</div>
+                                <div class="btn panda-btn-buy-now">Buy Now</div>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -144,9 +145,9 @@
 
     <main>
         <!-- catagories  -->
-        <section class="container">
+        <section class="container my-5 catagories">
 
-            <div class="row g-4 my-5">
+            <div class="row g-4">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
                         <h1 class="text-white">Watch
@@ -190,7 +191,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -203,7 +204,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -217,7 +218,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -237,7 +238,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -250,7 +251,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -264,7 +265,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -274,13 +275,13 @@
         <!-- subsscribe 
          -->
         <section id="subscribe" style="height: 300px;"
-            class="container bg-info d-flex justify-content-center align-items-center rounded-3">
+            class="container panda-bg-info d-flex justify-content-center align-items-center rounded-3">
             <div>
                 <h1>Lets stay in touch</h1>
                 <p>get updates on sale</p>
-                <input type="text" placeholder="your email">
+                <input class="form-control" type="text" placeholder="your email">
                 <br>
-                <button class="btn btn-warning">Submit</button>
+                <button class="panda-btn-buy-now">Submit</button>
             </div>
 
         </section>
